[gd_scene load_steps=28 format=2]

[ext_resource path="res://entities/player/Scripts/AttackControl.gd" type="Script" id=1]
[ext_resource path="res://entities/Health.gd" type="Script" id=2]
[ext_resource path="res://entities/player/Scripts/Parry.gd" type="Script" id=3]
[ext_resource path="res://entities/player/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://entities/player/Scripts/player_anim.gd" type="Script" id=5]
[ext_resource path="res://entities/player/Assets/Roberto.png" type="Texture" id=6]
[ext_resource path="res://entities/player/Assets/Roberto_Death.png" type="Texture" id=7]
[ext_resource path="res://entities/player/Assets/RobertoWalk 1.png" type="Texture" id=8]
[ext_resource path="res://entities/player/Assets/Roberto walk 3.png" type="Texture" id=9]
[ext_resource path="res://entities/player/Assets/Roberto walk 2.png" type="Texture" id=10]
[ext_resource path="res://entities/player/Assets/Roberto_Jump.png" type="Texture" id=11]
[ext_resource path="res://entities/player/Scripts/behaviours/attack.gd" type="Script" id=12]
[ext_resource path="res://entities/player/Scripts/behaviours/move.gd" type="Script" id=13]
[ext_resource path="res://entities/state.gd" type="Script" id=14]
[ext_resource path="res://entities/player/Scripts/behaviours/jump.gd" type="Script" id=15]

[sub_resource type="ParticlesMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
next_pass = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Parry",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=4]
script/source = "extends Node
"

[sub_resource type="Animation" id=5]
length = 0.45

[sub_resource type="Animation" id=6]

[sub_resource type="Animation" id=7]

[sub_resource type="Animation" id=8]
length = 0.6
loop = true

[sub_resource type="Animation" id=9]
length = 0.5
loop = true

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11, 2 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.72452

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8.31949, 6.90411 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
pause_mode = 1
material = SubResource( 2 )
position = Vector2( 0, 128 )
collision_mask = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ -100.308 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 5.72205e-06, 1.5 )
scale = Vector2( 0.304687, 0.265625 )
frames = SubResource( 3 )
animation = "Parry"
playing = true
script = ExtResource( 5 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 2 )
ignore_damage = true

[node name="ParryPoint" type="Node" parent="."]
script = SubResource( 4 )

[node name="Invunerability" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jump = SubResource( 7 )
anims/Walk = SubResource( 8 )
anims/blink = SubResource( 9 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"Attack",
"Player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="AttackColider" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -17.0357, -2 )
shape = SubResource( 10 )
disabled = true

[node name="AttackTimer" type="Timer" parent="AttackArea"]

[node name="Parry" type="Area2D" parent="." groups=[
"Parry",
]]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
parry_timer = 3

[node name="ParryColider" type="CollisionShape2D" parent="Parry"]
position = Vector2( -13, -2 )
rotation = 0.698132
shape = SubResource( 11 )
disabled = true

[node name="ParryTimer" type="Timer" parent="Parry"]

[node name="below_ground_detector" type="RayCast2D" parent="."]
position = Vector2( 2.00226, 3.67081 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4
collide_with_areas = true

[node name="Colider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.52588e-05 )
shape = SubResource( 12 )

[node name="behaviours" type="Node" parent="."]

[node name="move" type="Node" parent="behaviours"]
script = ExtResource( 13 )

[node name="attack" type="Node" parent="behaviours"]
script = ExtResource( 12 )

[node name="jump" type="Node" parent="behaviours"]
script = ExtResource( 15 )

[node name="states" type="Node" parent="."]

[node name="dead" type="Node" parent="states"]
script = ExtResource( 14 )
state_name = "dead"

[node name="normal" type="Node" parent="states"]
script = ExtResource( 14 )
used_behaviours = [ "move", "jump", "attack" ]

[node name="attacking" type="Node" parent="states"]
script = ExtResource( 14 )
used_behaviours = [ "attack" ]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="life_damaged" from="Health" to="." method="_test_for_invulnerability"]
[connection signal="life_damaged" from="Health" to="AnimatedSprite" method="_taken_damage"]
[connection signal="timeout" from="Invunerability" to="." method="_on_Invunerability_timeout"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_AttackArea_body_entered"]
